Automate k8s e2e
